fixed z-index

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -523,6 +523,7 @@
     padding: 8px;
     border-radius: 8px;
     height: 54px;
+    z-index: 1005;
 }
 
 #NavSearchFormToggle {
@@ -535,6 +536,7 @@
     padding: 8px;
     border-radius: 8px;
     height: 54px;
+    z-index: 1005;
 }
 
 .header-setup {
